// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover demo -- animation 1`] = `
<div>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    fade
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    zoom
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    bounce
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    slide-up
  </button>
</div>
`;

exports[`Popover demo -- base 1`] = `
<div>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    hover
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    focus
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    click
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    contextMenu
  </button>
</div>
`;

exports[`Popover demo -- control 1`] = `
.c0.uc-fe-popover {
  position: absolute;
  left: -9999px;
  top: -9999px;
  z-index: 100;
  display: block;
}

.c0.uc-fe-popover-hidden {
  display: none;
}

.c0.uc-fe-popover-animation-fade-enter,
.c0.uc-fe-popover-animation-fade-appear,
.c0.uc-fe-popover-animation-fade-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0.uc-fe-popover-animation-fade-enter,
.c0.uc-fe-popover-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c0.uc-fe-popover-animation-fade-leave {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c0.uc-fe-popover-animation-bounce-enter,
.c0.uc-fe-popover-animation-bounce-appear,
.c0.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0.uc-fe-popover-animation-bounce-enter,
.c0.uc-fe-popover-animation-bounce-appear {
  -webkit-animation-name: gLWDmf;
  animation-name: gLWDmf;
}

.c0.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-name: dSExIX;
  animation-name: dSExIX;
}

.c0.uc-fe-popover-animation-zoom-enter,
.c0.uc-fe-popover-animation-zoom-appear,
.c0.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0.uc-fe-popover-animation-zoom-enter,
.c0.uc-fe-popover-animation-zoom-appear {
  -webkit-animation-name: gDGwlq;
  animation-name: gDGwlq;
}

.c0.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-name: xUjnO;
  animation-name: xUjnO;
}

.c0.uc-fe-popover-animation-slide-up-enter,
.c0.uc-fe-popover-animation-slide-up-appear {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 0;
  -webkit-animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c0.uc-fe-popover-animation-slide-up-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 1;
  -webkit-animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c0.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomLeft,
.c0.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomLeft,
.c0.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomCenter,
.c0.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomCenter,
.c0.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomRight,
.c0.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kuepuf;
  animation-name: kuepuf;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topLeft,
.c0.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topLeft,
.c0.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topCenter,
.c0.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topCenter,
.c0.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topRight,
.c0.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bAmAeh;
  animation-name: bAmAeh;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomLeft,
.c0.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomCenter,
.c0.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kbwIVM;
  animation-name: kbwIVM;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topLeft,
.c0.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topCenter,
.c0.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bRXKvn;
  animation-name: bRXKvn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

<div>
  <div />
  <div
    id="TriggerContainer"
  >
    <div
      style="width:80px;height:50px;background:#ddd;display:inline-block;margin-left:5px;"
    >
      hover me
    </div>
    <div>
      <div
        class="uc-fe-popover c0 uc-fe-popover-placement-bottomLeft "
      >
        <div
          style="height:30px;border:1px solid #ddd;background:#fff;"
        >
          This is a popup
        </div>
      </div>
    </div>
  </div>
  <button>
    toggle
  </button>
</div>
`;

exports[`Popover demo -- placement 1`] = `
<div>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    topLeft
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    top
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    topRight
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    bottomLeft
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    bottom
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    bottomRight
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    leftTop
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    left
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    leftBottom
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    rightTop
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    right
  </button>
  <button
    style="width:100px;height:40px;background:#ddd;display:inline-block;margin:5px;"
  >
    rightBottom
  </button>
</div>
`;

exports[`Popover demo -- point 1`] = `
<div>
  <div />
  <div
    style="width:80px;height:50px;background:#ddd;display:inline-block;margin-left:5px;"
  >
    hover me
  </div>
</div>
`;

exports[`Popover demo -- stretch 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <button
      style="width:200px;height:100px;background:#ddd;display:inline-block;margin:5px;"
    >
      default
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      style="width:200px;height:100px;background:#ddd;display:inline-block;margin:5px;"
    >
      width
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      style="width:200px;height:100px;background:#ddd;display:inline-block;margin:5px;"
    >
      minHeight
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      style="width:200px;height:100px;background:#ddd;display:inline-block;margin:5px;"
    >
      height, width
    </button>
  </div>
</div>
`;
